# Corpuscle

./: CMakeLists.txt  LICENSE  README.md
data/: gui.theme  scene.json
extlibs/imgui/: imconfig.h
include/: camera.hpp  cube.hpp  cuboid.hpp  object.hpp  random.inl  ray.hpp  renderer.hpp  rendermanager.hpp  scene.hpp  sphere.hpp  utility.hpp  utility.inl
include/mc/: chunk.hpp  map.hpp
include/nbt/: chunk.hpp  nbt.hpp  node.hpp
include/renderer/: aabb.hpp  bvh.hpp  camera.hpp  cuboid.hpp  object.hpp  random.hpp  random.inl  ray.hpp  ray.inl  renderer.hpp  rendermanager.hpp  scene.hpp  sphere.hpp  utility.hpp  utility.inl
src/: camera.cpp  cube.cpp  cuboid.cpp  main.cpp  object.cpp  ray.cpp  renderer.cpp  rendermanager.cpp  scene.cpp  sphere.cpp  utility.cpp
src/console/: CMakeLists.txt  main.cpp
src/mc/: CMakeLists.txt  chunk.cpp  map.cpp  node.cpp
src/nbt/: CMakeLists.txt  chunk.cpp  map.cpp  nbt.cpp
src/renderer/: CMakeLists.txt  aabb.cpp  bvh.cpp  camera.cpp  cuboid.cpp  object.cpp  ray.cpp  renderer.cpp  rendermanager.cpp  scene.cpp  sphere.cpp  utility.cpp
src/ui/: CMakeLists.txt  main.cpp
